--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -45,10 +45,12 @@ test:
 
 about:
   home: https://github.com/sjewo/readstata13
-  license: GPL-2
-  license_file: {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2
+  license: GPL-2.0-only
   summary: Function to read and write the 'Stata' file format.
   license_family: GPL2
+  license_file:
+    - {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2
+    - LICENSE
 
 extra:
   recipe-maintainers:
